se agregan estilos con css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hoja de vida</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header class="header">
@@ -61,10 +62,13 @@
         </tr>
         <!-- Más filas según tus habilidades -->
       </table>
-
+  
       <h2>Proyectos</h2>
-      <ul>
+      <ul class="mis-proyectos">
         <li> <a href="MiPortafolioWeb/detalle-proyecto.html">Coneccion a base de datos con H2</a></li>
+        <li> Proyecto sistema de citas medicas </li>
+        <li> Otro proyecto </li>
+        <li> Otro proyecto </li>
       </ul>
 
       <form action="#" method="post">
