--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hoja de vida</title>
     <link rel="stylesheet" href="styles.css">
+    
   </head>
   <body>
     <header class="header">
@@ -14,12 +15,12 @@
         <p>Teléfono: +1 123 456 789</p>
         <p>Ubicación: Bogota, Colombia</p>
         <p>
-          <a href="https://github.com/mariahiguera2210" target="_blank"
+          <a href="https://github.com/mariahiguera2210" target="_blank" rel="noopener"
             >Perfil GitHub</a
           >
         </p>
         <p>
-          <a href="https://www.linkedin.com/in/maria-higuera/" target="_blank"
+          <a href="https://www.linkedin.com/in/maria-higuera/" target="_blank" rel="noopener"
             >Perfil LinkedIn</a
           >
         </p>
@@ -60,8 +61,8 @@
           <td>GitHub</td>
           <td>Intermedio</td>
         </tr>
-        <!-- Más filas según tus habilidades -->
       </table>
+      <button id="addSkill">Añadir Habilidad</button>
   
       <h2>Proyectos</h2>
       <ul class="mis-proyectos">
@@ -71,15 +72,16 @@
         <li> Otro proyecto </li>
       </ul>
 
-      <form action="#" method="post">
+      <form action="process_form.php" method="post" id="myForm">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="user_email" />
+        <input type="email" id="email" name="user_email" required />
 
         <label for="message">Mensaje:</label>
         <textarea id="message" name="user_message"></textarea>
 
-        <input type="submit" value="Contactar" />
+        <input type="submit" value="Contactar" id="contactar" />
       </form>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
