se modifica lista proyectos

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             >Coneccion a base de datos con H2</a
           >
         </li>
-        <li>Proyecto sistema de citas medicas</li>
-        <li>Otro proyecto</li>
-        <li>Otro proyecto</li>
+        <li>Sistema de citas medicas</li>
+        <li>Tienda de Barrio</li>
+        <li>Hoja de vida</li>
       </ul>
-      <div>
+      <div class="boton">
         <button id="verProyectos">Ver proyectos Anteriores</button>
       </div>
 
